[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 99.0
margin_top = 100.0
margin_right = -101.0
margin_bottom = -100.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 273.0
margin_top = 114.0
margin_right = 550.0
margin_bottom = 286.0
script = ExtResource( 1 )

[node name="title" type="Label" parent="CenterContainer/GridContainer"]
margin_right = 277.0
margin_bottom = 14.0
text = "rocket jump v1.0"
align = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/GridContainer"]
margin_top = 18.0
margin_right = 277.0
margin_bottom = 86.0
columns = 3

[node name="Tutorial" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
margin_right = 66.0
margin_bottom = 20.0
text = "Tutorial"

[node name="StrafeTut" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
margin_left = 70.0
margin_right = 170.0
margin_bottom = 20.0
text = "Strafe Tutorial"

[node name="Walls" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
margin_left = 174.0
margin_right = 277.0
margin_bottom = 20.0
text = "Walls"

[node name="BasicCourse" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
margin_top = 24.0
margin_right = 66.0
margin_bottom = 44.0
text = "The Test"

[node name="Playground" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
margin_left = 70.0
margin_top = 24.0
margin_right = 170.0
margin_bottom = 44.0
text = "Playground"

[node name="Secret Cheese" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
margin_left = 174.0
margin_top = 24.0
margin_right = 277.0
margin_bottom = 44.0
text = "Secret Cheese"

[node name="Caves" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
margin_top = 48.0
margin_right = 66.0
margin_bottom = 68.0
text = "Caves"

[node name="Playground2" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
margin_left = 70.0
margin_top = 48.0
margin_right = 170.0
margin_bottom = 68.0
text = "Playground 2"

[node name="senslabel" type="Label" parent="CenterContainer/GridContainer"]
margin_top = 90.0
margin_right = 277.0
margin_bottom = 104.0
text = "sensitivity"
align = 1

[node name="sensslider" type="HSlider" parent="CenterContainer/GridContainer"]
margin_top = 108.0
margin_right = 277.0
margin_bottom = 124.0
min_value = 1.0
max_value = 5.0
step = 0.1
value = 2.0
ticks_on_borders = true

[node name="save" type="Button" parent="CenterContainer/GridContainer"]
margin_top = 128.0
margin_right = 277.0
margin_bottom = 148.0
text = "save sensitivity"

[node name="ClearData" type="Button" parent="CenterContainer/GridContainer"]
margin_top = 152.0
margin_right = 277.0
margin_bottom = 172.0
text = "Clear game data"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 417.0
margin_top = 276.0
margin_right = 621.0
margin_bottom = 351.0
dialog_text = "Are you sure? This will delete
all of your save data."

[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/Tutorial" to="CenterContainer/GridContainer" method="_on_Tutorial_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/StrafeTut" to="CenterContainer/GridContainer" method="_on_StrafeTut_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/Walls" to="CenterContainer/GridContainer" method="_on_Walls_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/BasicCourse" to="CenterContainer/GridContainer" method="_on_Bsc1_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/Playground" to="CenterContainer/GridContainer" method="_on_Playground_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/Secret Cheese" to="CenterContainer/GridContainer" method="_on_Secret_Cheese_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/Caves" to="CenterContainer/GridContainer" method="_on_Caves_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/Playground2" to="CenterContainer/GridContainer" method="_on_Playground2_pressed"]
[connection signal="value_changed" from="CenterContainer/GridContainer/sensslider" to="CenterContainer/GridContainer" method="_on_sensslider_value_changed"]
[connection signal="pressed" from="CenterContainer/GridContainer/save" to="CenterContainer/GridContainer" method="_on_save_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/ClearData" to="CenterContainer/GridContainer" method="_on_ClearData_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="CenterContainer/GridContainer" method="_on_ConfirmationDialog_confirmed"]
